# HomeGrownDHE

./: .gitignore  README.md  environment.yaml  pyproject.toml
.github/workflows/: codeql.yml  python-package-conda.yml  test-conda.yml
homegrowndhe/: __init__.py  __main__.py  dhe.py  main.py  util.py
tests/: test_homegrowndhe.py
